moving event array to matsim packages. preparing the code for this new data structure.